Counting unique users

--- a/ml-foundations/recommender_systems/song_recommender.ipynb
+++ b/ml-foundations/recommender_systems/song_recommender.ipynb
@@ -20,11 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1487634763.log.0\n"
+     ]
+    }
+   ],
    "source": [
     "song_data = graphlab.SFrame('ML/Curso1/song_data.gl/')"
    ]
@@ -38,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +235,7 @@
        "[10 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -242,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +323,7 @@
        "1116609"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -348,7 +363,7 @@
        "66346"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -384,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -464,10 +479,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>    Data prepared in: 1.54318s</pre>"
+       "<pre>    Data prepared in: 1.65058s</pre>"
       ],
       "text/plain": [
-       "    Data prepared in: 1.54318s"
+       "    Data prepared in: 1.65058s"
       ]
      },
      "metadata": {},
@@ -501,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -607,7 +622,7 @@
        "[10 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -724,7 +739,7 @@
        "[10 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -822,10 +837,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>    Data prepared in: 1.45686s</pre>"
+       "<pre>    Data prepared in: 1.2956s</pre>"
       ],
       "text/plain": [
-       "    Data prepared in: 1.45686s"
+       "    Data prepared in: 1.2956s"
       ]
      },
      "metadata": {},
@@ -894,10 +909,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>| 47.048ms                       | 4.5        |</pre>"
+       "<pre>| 58.128ms                       | 1.5        |</pre>"
       ],
       "text/plain": [
-       "| 47.048ms                       | 4.5        |"
+       "| 58.128ms                       | 1.5        |"
       ]
      },
      "metadata": {},
@@ -906,10 +921,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>| 89.585ms                       | 100        |</pre>"
+       "<pre>| 80.643ms                       | 100        |</pre>"
       ],
       "text/plain": [
-       "| 89.585ms                       | 100        |"
+       "| 80.643ms                       | 100        |"
       ]
      },
      "metadata": {},
@@ -990,10 +1005,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>| 419.507ms                           | 0                | 0               |</pre>"
+       "<pre>| 581.254ms                           | 6                | 617             |</pre>"
       ],
       "text/plain": [
-       "| 419.507ms                           | 0                | 0               |"
+       "| 581.254ms                           | 6                | 617             |"
       ]
      },
      "metadata": {},
@@ -1002,10 +1017,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>| 2.26s                               | 100              | 9952            |</pre>"
+       "<pre>| 2.77s                               | 100              | 9952            |</pre>"
       ],
       "text/plain": [
-       "| 2.26s                               | 100              | 9952            |"
+       "| 2.77s                               | 100              | 9952            |"
       ]
      },
      "metadata": {},
@@ -1050,10 +1065,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Finished training in 3.43556s</pre>"
+       "<pre>Finished training in 4.2802s</pre>"
       ],
       "text/plain": [
-       "Finished training in 3.43556s"
+       "Finished training in 4.2802s"
       ]
      },
      "metadata": {},
@@ -1075,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1195,7 +1210,7 @@
        "[10 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1326,7 +1341,7 @@
        "[10 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1457,7 +1472,7 @@
        "[10 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1588,7 +1603,7 @@
        "[10 rows x 4 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1622,10 +1637,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>recommendations finished on 1000/2931 queries. users per second: 7634.4</pre>"
+       "<pre>recommendations finished on 1000/2931 queries. users per second: 8963.87</pre>"
       ],
       "text/plain": [
-       "recommendations finished on 1000/2931 queries. users per second: 7634.4"
+       "recommendations finished on 1000/2931 queries. users per second: 8963.87"
       ]
      },
      "metadata": {},
@@ -1634,10 +1649,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>recommendations finished on 2000/2931 queries. users per second: 8401.38</pre>"
+       "<pre>recommendations finished on 2000/2931 queries. users per second: 9895.16</pre>"
       ],
       "text/plain": [
-       "recommendations finished on 2000/2931 queries. users per second: 8401.38"
+       "recommendations finished on 2000/2931 queries. users per second: 9895.16"
       ]
      },
      "metadata": {},
@@ -1652,16 +1667,16 @@
       "+--------+-----------------+------------------+\n",
       "| cutoff |  mean_precision |   mean_recall    |\n",
       "+--------+-----------------+------------------+\n",
-      "|   1    | 0.0279767997271 | 0.00777701107793 |\n",
-      "|   2    | 0.0274650290003 |  0.016709014099  |\n",
-      "|   3    | 0.0249061753668 | 0.0226047938945  |\n",
-      "|   4    | 0.0233708631866 | 0.0273664070491  |\n",
-      "|   5    | 0.0210167178437 | 0.0303249292502  |\n",
-      "|   6    | 0.0203002388263 | 0.0345340220709  |\n",
-      "|   7    | 0.0195935078228 | 0.0387737667902  |\n",
-      "|   8    | 0.0184663937223 |  0.041291068284  |\n",
-      "|   9    | 0.0178551120209 | 0.0444253169914  |\n",
-      "|   10   | 0.0168884339816 |  0.046413641037  |\n",
+      "|   1    | 0.0276356192426 | 0.00619081343237 |\n",
+      "|   2    | 0.0271238485159 | 0.0130016226997  |\n",
+      "|   3    | 0.0241100875697 | 0.0177259016051  |\n",
+      "|   4    | 0.0226885022177 | 0.0217794948588  |\n",
+      "|   5    | 0.0207437734562 | 0.0242564627145  |\n",
+      "|   6    | 0.0192766973729 | 0.0271999259574  |\n",
+      "|   7    | 0.0181313057465 | 0.0304640336227  |\n",
+      "|   8    |  0.01752814739  | 0.0341645002966  |\n",
+      "|   9    | 0.0167178437393 | 0.0375809760646  |\n",
+      "|   10   | 0.0158990105766 | 0.0402882284392  |\n",
       "+--------+-----------------+------------------+\n",
       "[10 rows x 3 columns]\n",
       "\n",
@@ -1671,10 +1686,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>recommendations finished on 1000/2931 queries. users per second: 6821.42</pre>"
+       "<pre>recommendations finished on 1000/2931 queries. users per second: 7993.22</pre>"
       ],
       "text/plain": [
-       "recommendations finished on 1000/2931 queries. users per second: 6821.42"
+       "recommendations finished on 1000/2931 queries. users per second: 7993.22"
       ]
      },
      "metadata": {},
@@ -1683,10 +1698,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>recommendations finished on 2000/2931 queries. users per second: 7702.02</pre>"
+       "<pre>recommendations finished on 2000/2931 queries. users per second: 8361.83</pre>"
       ],
       "text/plain": [
-       "recommendations finished on 2000/2931 queries. users per second: 7702.02"
+       "recommendations finished on 2000/2931 queries. users per second: 8361.83"
       ]
      },
      "metadata": {},
@@ -1701,16 +1716,16 @@
       "+--------+-----------------+-----------------+\n",
       "| cutoff |  mean_precision |   mean_recall   |\n",
       "+--------+-----------------+-----------------+\n",
-      "|   1    |  0.198567041965 | 0.0661770593163 |\n",
-      "|   2    |  0.166666666667 |  0.10313979047  |\n",
-      "|   3    |  0.141134993745 |  0.128256035725 |\n",
-      "|   4    |  0.124872057318 |  0.149839782923 |\n",
-      "|   5    |  0.113476629137 |  0.167681794393 |\n",
-      "|   6    |  0.104060047765 |  0.182665384145 |\n",
-      "|   7    | 0.0964565969684 |  0.19652251814  |\n",
-      "|   8    |  0.090242238144 |  0.209054700169 |\n",
-      "|   9    | 0.0841199438948 |  0.218302975871 |\n",
-      "|   10   | 0.0797679972706 |  0.229804498579 |\n",
+      "|   1    |  0.194814056636 | 0.0612420404002 |\n",
+      "|   2    |  0.159501876493 | 0.0949247518848 |\n",
+      "|   3    |  0.141703627886 |  0.124704631678 |\n",
+      "|   4    |  0.127089730467 |  0.149049977658 |\n",
+      "|   5    |  0.11538723985  |  0.165192047613 |\n",
+      "|   6    |  0.105595359945 |  0.179247125652 |\n",
+      "|   7    | 0.0985036798752 |  0.193920025727 |\n",
+      "|   8    | 0.0920334356875 |  0.206476219769 |\n",
+      "|   9    | 0.0869631145987 |  0.217756234913 |\n",
+      "|   10   | 0.0826680313886 |  0.22809855901  |\n",
       "+--------+-----------------+-----------------+\n",
       "[10 rows x 3 columns]\n",
       "\n"
@@ -1721,6 +1736,47 @@
     "%matplotlib inline\n",
     "model_performance = graphlab.recommender.util.compare_models(test_data, [popularity_model, personalized_model],\n",
     "                                                             user_sample=0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Counting unique users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kanye West 2522\n",
+      "Foo Fighters 2055\n",
+      "Taylor Swift 3246\n",
+      "Lady GaGa 2928\n"
+     ]
+    }
+   ],
+   "source": [
+    "kw_listeners = len(song_data[song_data['artist'] == 'Kanye West']['user_id'].unique())\n",
+    "print 'Kanye West', kw_listeners\n",
+    "\n",
+    "ff_listeners = len(song_data[song_data['artist'] == 'Foo Fighters']['user_id'].unique())\n",
+    "print 'Foo Fighters', ff_listeners\n",
+    "\n",
+    "ts_listeners = len(song_data[song_data['artist'] == 'Taylor Swift']['user_id'].unique())\n",
+    "print 'Taylor Swift', ts_listeners\n",
+    "\n",
+    "lg_listeners = len(song_data[song_data['artist'] == 'Lady GaGa']['user_id'].unique())\n",
+    "print 'Lady GaGa', lg_listeners"
    ]
   },
   {
