Using groubpy-aggregate to find the most popular and least popular artist

--- a/ml-foundations/recommender_systems/song_recommender.ipynb
+++ b/ml-foundations/recommender_systems/song_recommender.ipynb
@@ -1780,6 +1780,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using groupby-aggregate to find the most popular and least popular artist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'total_count': 14L, 'artist': 'William Tabbert'} {'total_count': 43218L, 'artist': 'Kings Of Leon'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "aggregation = song_data.groupby(key_columns='artist', operations={'total_count': graphlab.aggregate.SUM('listen_count')})\n",
+    "aggregation = aggregation.sort('total_count')\n",
+    "least_popular = aggregation[0]\n",
+    "most_popular = aggregation[-1]\n",
+    "print least_popular, most_popular"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
