--- a/ml-foundations/recommender_systems/song_recommender.ipynb
+++ b/ml-foundations/recommender_systems/song_recommender.ipynb
@@ -1810,13 +1810,510 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using groupby-aggregate to find the most recommended songs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data, test_data = song_data.random_split(.8, seed=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Recsys training: model = item_similarity</pre>"
+      ],
+      "text/plain": [
+       "Recsys training: model = item_similarity"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Warning: Ignoring columns song_id, listen_count, title, artist;</pre>"
+      ],
+      "text/plain": [
+       "Warning: Ignoring columns song_id, listen_count, title, artist;"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>    To use one of these as a target column, set target = <column_name></pre>"
+      ],
+      "text/plain": [
+       "    To use one of these as a target column, set target = <column_name>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>    and use a method that allows the use of a target.</pre>"
+      ],
+      "text/plain": [
+       "    and use a method that allows the use of a target."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Preparing data set.</pre>"
+      ],
+      "text/plain": [
+       "Preparing data set."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>    Data has 893580 observations with 66085 users and 9952 items.</pre>"
+      ],
+      "text/plain": [
+       "    Data has 893580 observations with 66085 users and 9952 items."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>    Data prepared in: 1.71122s</pre>"
+      ],
+      "text/plain": [
+       "    Data prepared in: 1.71122s"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Training model from provided data.</pre>"
+      ],
+      "text/plain": [
+       "Training model from provided data."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Gathering per-item and per-user statistics.</pre>"
+      ],
+      "text/plain": [
+       "Gathering per-item and per-user statistics."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------------------------+------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------------------------+------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Elapsed Time (Item Statistics) | % Complete |</pre>"
+      ],
+      "text/plain": [
+       "| Elapsed Time (Item Statistics) | % Complete |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------------------------+------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------------------------+------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1.001ms                        | 4.5        |</pre>"
+      ],
+      "text/plain": [
+       "| 1.001ms                        | 4.5        |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 41.026ms                       | 100        |</pre>"
+      ],
+      "text/plain": [
+       "| 41.026ms                       | 100        |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------------------------+------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------------------------+------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Setting up lookup tables.</pre>"
+      ],
+      "text/plain": [
+       "Setting up lookup tables."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Processing data in one pass using dense lookup tables.</pre>"
+      ],
+      "text/plain": [
+       "Processing data in one pass using dense lookup tables."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-------------------------------------+------------------+-----------------+</pre>"
+      ],
+      "text/plain": [
+       "+-------------------------------------+------------------+-----------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Elapsed Time (Constructing Lookups) | Total % Complete | Items Processed |</pre>"
+      ],
+      "text/plain": [
+       "| Elapsed Time (Constructing Lookups) | Total % Complete | Items Processed |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-------------------------------------+------------------+-----------------+</pre>"
+      ],
+      "text/plain": [
+       "+-------------------------------------+------------------+-----------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 246.18ms                            | 0                | 0               |</pre>"
+      ],
+      "text/plain": [
+       "| 246.18ms                            | 0                | 0               |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1.87s                               | 100              | 9952            |</pre>"
+      ],
+      "text/plain": [
+       "| 1.87s                               | 100              | 9952            |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-------------------------------------+------------------+-----------------+</pre>"
+      ],
+      "text/plain": [
+       "+-------------------------------------+------------------+-----------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Finalizing lookup tables.</pre>"
+      ],
+      "text/plain": [
+       "Finalizing lookup tables."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Generating candidate set for working with new users.</pre>"
+      ],
+      "text/plain": [
+       "Generating candidate set for working with new users."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Finished training in 1.99235s</pre>"
+      ],
+      "text/plain": [
+       "Finished training in 1.99235s"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "personalized_model = graphlab.item_similarity_recommender.create(train_data, user_id='user_id', item_id='song')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "subset_test_users = test_data['user_id'].unique()[0:10000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 1000/10000 queries. users per second: 10463.1</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 1000/10000 queries. users per second: 10463.1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 2000/10000 queries. users per second: 11825.5</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 2000/10000 queries. users per second: 11825.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 3000/10000 queries. users per second: 12362.3</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 3000/10000 queries. users per second: 12362.3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 4000/10000 queries. users per second: 12510.7</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 4000/10000 queries. users per second: 12510.7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 5000/10000 queries. users per second: 12633.4</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 5000/10000 queries. users per second: 12633.4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 6000/10000 queries. users per second: 12716.5</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 6000/10000 queries. users per second: 12716.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 7000/10000 queries. users per second: 12695.4</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 7000/10000 queries. users per second: 12695.4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 8000/10000 queries. users per second: 12750.4</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 8000/10000 queries. users per second: 12750.4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 9000/10000 queries. users per second: 12894.4</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 9000/10000 queries. users per second: 12894.4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>recommendations finished on 10000/10000 queries. users per second: 12681.7</pre>"
+      ],
+      "text/plain": [
+       "recommendations finished on 10000/10000 queries. users per second: 12681.7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "recommendations = personalized_model.recommend(subset_test_users, k=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'count': 434L, 'song': 'Undo - Bj\\xc3\\xb6rk'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "aggregation_rec = recommendations.groupby(key_columns='song', operations={'count': graphlab.aggregate.COUNT()})\n",
+    "most_recommended_song = aggregation_rec.sort('count', ascending=False)[0]\n",
+    "print most_recommended_song"
+   ]
   },
   {
    "cell_type": "code",
