Creating a nearest neighbors model for image retrieval

--- a/ml-foundations/deep_learning/image_retrieval.ipynb
+++ b/ml-foundations/deep_learning/image_retrieval.ipynb
@@ -188,6 +188,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train a nearest-neighbors model for retrieving images using deep features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting brute force nearest neighbors model training.</pre>"
+      ],
+      "text/plain": [
+       "Starting brute force nearest neighbors model training."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "knn_model = graphlab.nearest_neighbors.create(image_train, features=['deep_features'], label='id')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
