Nearest-neighbors classification

--- a/ml-foundations/deep_learning/image_retrieval.ipynb
+++ b/ml-foundations/deep_learning/image_retrieval.ipynb
@@ -2160,6 +2160,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average distance between 'cat' and cat training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat mean:  36.1557307098 ; dog mean: 37.7707113618\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_mean = cat_neighbors['distance'].mean()\n",
+    "dog_mean = dog_neighbors['distance'].mean()\n",
+    "print 'cat mean: ', cat_mean, '; dog mean:', dog_mean"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
