Computing nearest neighbors accuracy using SFrame operations

--- a/ml-foundations/deep_learning/image_retrieval.ipynb
+++ b/ml-foundations/deep_learning/image_retrieval.ipynb
@@ -2188,6 +2188,632 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spliting test data by label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def split_by_label(image_set, label):\n",
+    "    return image_set[image_set['label'] == label]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "image_test_cat = split_by_label(image_test, 'cat')\n",
+    "image_test_dog = split_by_label(image_test, 'dog')\n",
+    "image_test_automobile = split_by_label(image_test, 'automobile')\n",
+    "image_test_bird = split_by_label(image_test, 'bird')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding nearest neighbors in the training set for each of the test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting blockwise querying.</pre>"
+      ],
+      "text/plain": [
+       "Starting blockwise querying."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>max rows per data block: 4348</pre>"
+      ],
+      "text/plain": [
+       "max rows per data block: 4348"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>number of reference data blocks: 4</pre>"
+      ],
+      "text/plain": [
+       "number of reference data blocks: 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>number of query data blocks: 1</pre>"
+      ],
+      "text/plain": [
+       "number of query data blocks: 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Query points | # Pairs | % Complete. | Elapsed Time |</pre>"
+      ],
+      "text/plain": [
+       "| Query points | # Pairs | % Complete. | Elapsed Time |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1000         | 127000  | 24.9509     | 525.491ms    |</pre>"
+      ],
+      "text/plain": [
+       "| 1000         | 127000  | 24.9509     | 525.491ms    |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Done         | 509000  | 100         | 639.913ms    |</pre>"
+      ],
+      "text/plain": [
+       "| Done         | 509000  | 100         | 639.913ms    |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting blockwise querying.</pre>"
+      ],
+      "text/plain": [
+       "Starting blockwise querying."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>max rows per data block: 4348</pre>"
+      ],
+      "text/plain": [
+       "max rows per data block: 4348"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>number of reference data blocks: 4</pre>"
+      ],
+      "text/plain": [
+       "number of reference data blocks: 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>number of query data blocks: 1</pre>"
+      ],
+      "text/plain": [
+       "number of query data blocks: 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Query points | # Pairs | % Complete. | Elapsed Time |</pre>"
+      ],
+      "text/plain": [
+       "| Query points | # Pairs | % Complete. | Elapsed Time |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1000         | 119000  | 24.8954     | 549.091ms    |</pre>"
+      ],
+      "text/plain": [
+       "| 1000         | 119000  | 24.8954     | 549.091ms    |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Done         | 478000  | 100         | 558.098ms    |</pre>"
+      ],
+      "text/plain": [
+       "| Done         | 478000  | 100         | 558.098ms    |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting blockwise querying.</pre>"
+      ],
+      "text/plain": [
+       "Starting blockwise querying."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>max rows per data block: 4348</pre>"
+      ],
+      "text/plain": [
+       "max rows per data block: 4348"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>number of reference data blocks: 4</pre>"
+      ],
+      "text/plain": [
+       "number of reference data blocks: 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>number of query data blocks: 1</pre>"
+      ],
+      "text/plain": [
+       "number of query data blocks: 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Query points | # Pairs | % Complete. | Elapsed Time |</pre>"
+      ],
+      "text/plain": [
+       "| Query points | # Pairs | % Complete. | Elapsed Time |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1000         | 127000  | 24.9509     | 535.355ms    |</pre>"
+      ],
+      "text/plain": [
+       "| 1000         | 127000  | 24.9509     | 535.355ms    |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Done         | 509000  | 100         | 556.871ms    |</pre>"
+      ],
+      "text/plain": [
+       "| Done         | 509000  | 100         | 556.871ms    |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting blockwise querying.</pre>"
+      ],
+      "text/plain": [
+       "Starting blockwise querying."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>max rows per data block: 4348</pre>"
+      ],
+      "text/plain": [
+       "max rows per data block: 4348"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>number of reference data blocks: 4</pre>"
+      ],
+      "text/plain": [
+       "number of reference data blocks: 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>number of query data blocks: 1</pre>"
+      ],
+      "text/plain": [
+       "number of query data blocks: 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Query points | # Pairs | % Complete. | Elapsed Time |</pre>"
+      ],
+      "text/plain": [
+       "| Query points | # Pairs | % Complete. | Elapsed Time |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1000         | 127000  | 24.9509     | 578.383ms    |</pre>"
+      ],
+      "text/plain": [
+       "| 1000         | 127000  | 24.9509     | 578.383ms    |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Done         | 509000  | 100         | 606.402ms    |</pre>"
+      ],
+      "text/plain": [
+       "| Done         | 509000  | 100         | 606.402ms    |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+--------------+---------+-------------+--------------+</pre>"
+      ],
+      "text/plain": [
+       "+--------------+---------+-------------+--------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dog_cat_neighbors = cat_model.query(image_test_dog, k=1)\n",
+    "dog_bird_neighbors = bird_model.query(image_test_dog, k=1)\n",
+    "dog_automobile_neighbors = automobile_model.query(image_test_dog, k=1)\n",
+    "dog_dog_neighbors = dog_model.query(image_test_dog, k=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create an SFrame with the distances from 'dog' test examples to the respective nearest neighbors in each class in the training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dog_distances = graphlab.SFrame({'dog-automobile': dog_automobile_neighbors['distance'], \n",
+    "                                 'dog-bird': dog_bird_neighbors['distance'],\n",
+    "                                 'dog-cat': dog_cat_neighbors['distance'],\n",
+    "                                 'dog-dog': dog_dog_neighbors['distance']})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computing the number of correct predictions using 1-nearest neighbors for the dog class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def is_dog_correct(row):\n",
+    "    if row['dog-dog'] < row['dog-automobile'] and row['dog-dog'] < row['dog-bird'] and row['dog-dog'] < row['dog-cat']:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computing the number of correct predictions for 'dog'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "value = dog_distances.apply(is_dog_correct).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "acc = float(value)/len(dog_distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.678\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'accuracy:', acc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
